# business-day-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/business_day_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_aggregates.py  test_basic_tools.py  test_case_insensitive_country.py  test_coverage_gaps.py  test_edge_cases.py  test_metadata.py  test_navigation.py  test_statelessness.py  test_subdiv.py
