[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "business-day-mcp"
version = "0.1.0"
description = "MCP server for business-day arithmetic with country-aware holiday calendars."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Fabio Oliveira", email = "fabio.braga@gmail.com" }
]
keywords = ["mcp", "business-day", "holidays", "calendar", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.12,<3",
    "holidays>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
    "pre-commit>=3.8",
]

[project.scripts]
business-day-mcp = "business_day_mcp.server:main"

[project.urls]
Homepage = "https://github.com/fbdo/business-day-mcp"
Repository = "https://github.com/fbdo/business-day-mcp"
Issues = "https://github.com/fbdo/business-day-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/business_day_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C90", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S311"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=business_day_mcp --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/business_day_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/business_day_mcp/__init__.py:__version__"]
branch = "main"
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
upload_to_pypi = false
upload_to_release = false
build_command = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "style", "test", "build", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
